--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nuxt": "^3.15.2",
+    "nuxt-vitalizer": "0.10.0",
     "vue": "latest",
     "vue-router": "latest"
   }
